--- a/naver_map_mission.html
+++ b/naver_map_mission.html
@@ -85,7 +85,6 @@
 <body style="margin:0;font-family:'Nanum Square', sans-serif;background:rgb(229, 243, 226);color:rgb(15, 23, 42);padding:20px;overflow-x:hidden;">
   <div class="container" style="max-width:720px;margin:0 auto;display:flex;flex-direction:column;gap:20px;">
 
-    <!-- 알림 -->
     <div style="display:flex;align-items:center;gap:10px;padding:14px 16px;background:#ffffff;border-radius:12px;border:1px solid #e5e7eb;">
       <div style="width:32px;height:32px;border-radius:50%;background:#eef2ff;display:flex;align-items:center;justify-content:center;">
         ⚙️
@@ -95,17 +94,15 @@
       </div>
     </div>
 
-    <img src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png"
-      alt="검색 예시"
-      style="width:100%;height:auto;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);display:block;">
-
-    <!-- 타이틀 -->
+    <img src='https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_d6ms6zd6ms6zd6ms.png'
+           alt='검색 예시'
+           style='width:50%;height:auto;border-radius:14px;display:flex; margin: 0 auto;'>
     <div class="titleRow" style="display:flex;align-items:center;gap:12px;">
       <div style="width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,#6366f1,#8b5cf6);display:flex;align-items:center;justify-content:center;font-size:22px;color:#fff;">
         💰
       </div>
       <div class="titleText" style="font-size:22px;font-weight:800;color:#1e293b;">
-        플레이스 찾기 미션 방법
+        플레이스 찾기 미션 안내
       </div>
     </div>
 
@@ -118,18 +115,16 @@
           <img src="findanswer/keywordpm5.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
           <span style="font-size:9px;flex:0 0 auto; margin-left:-2px; color:rgba(0,0,0);">클릭 후,</span>
           <img src="findanswer/missionStart22.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
-          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px;">클릭 후,</span>
-          <img src="findanswer/naver_logo.png" style="flex:0.65 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
         </div>
 
-        <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:4.5px 8px;margin-bottom:4px;color:#1e40af;display: inline-block; align-self:flex-start;">
+        <!-- <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:4.5px 8px;margin-bottom:4px;color:#1e40af;display: inline-block; align-self:flex-start;">
           <div style="font-size:13px;color:#475569;">
             <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span><span style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
             <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
             <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
             <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭!</span>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -144,7 +139,7 @@
       </div>
 
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
-        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
           <img src="findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
         </span>
@@ -153,7 +148,10 @@
 
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="findanswer/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
+        <img src="TEST.png" style="height:100px; width:auto;" />
+        <img src="TEST2.png" style="height:100px; width:auto;" />
+
+        <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
       </div>
     </div>
 
@@ -167,7 +165,7 @@
           <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
           <span style="font-weight:300;color:black;font-size:13px"> 후,</span>
           <br>
-          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
+          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
           <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
           <img src="findanswer/answer_submit.png" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
         </div>
@@ -182,70 +180,68 @@
     <!-- 미션질문 참고 이미지 -->
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">#</div>
 
-
-<div class="card" style="  
-  background:rgb(240, 243, 226);
+<div class="card" style="
+  background: rgb(226, 225, 225);
   border-radius:12px;
   padding:16px;
   border:1px solid #e5e7eb;
 ">
 
-  <div style="font-size:16px;font-weight:800;margin-bottom:4px;">
+  <!-- 카드 타이틀 -->
+  <div style="font-size:16px;font-weight:800;margin-bottom:4px;color:#1f2937;">
     미션질문 참고 이미지
   </div>
 
-  <div style="font-size:13px;color:#64748b;margin-bottom:14px;">
+  <!-- 카드 설명 -->
+  <div style="font-size:13px;color:#374151;margin-bottom:14px;">
     버튼 위치를 확인할 때 참고해 주세요
   </div>
 
-  <!-- GRID -->
   <div style="
     display:grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns: 0.9fr 1fr;
     gap:14px;
+    align-items:start;
   ">
 
-    <!-- 리뷰탭 -->
-<div>
-  <div style="
-    font-size:11px;
-    font-weight:700;
-    color:#334155;
-    margin-bottom:6px;
-    white-space:nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    line-height:1.2;
-  ">
-    [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순]
-  </div>
+    <!-- TITLE (FULL WIDTH) -->
+    <div style="
+      grid-column: 1 / -1;
+      font-size:10.5px;
+      font-weight:800;
+      color:#1d4ed8;
+      line-height:1.25;
+      margin-bottom:-7px;
+      white-space:normal;
+      word-break:keep-all;
+    ">
+      [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순]
+    </div>
 
-  <div style="
-    border-radius:10px;
-    overflow:hidden;
-    border:1px solid #e5e7eb;
-    background:#fff;
-  ">
-    <img src="findanswer/review_teamleader.png"
-      style="
-        width:100%;
-        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
-        display:block;
-      ">
-  </div>
-</div>
-
-
-    <!-- 공유하기 -->
+    <!-- LEFT IMAGE -->
     <div>
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:#fff;
+        padding:6px;
+      ">
+        <img src="findanswer/review_teamleader.png"
+          style="width:100%;height:auto;display:block;">
+      </div>
+    </div>
+
+    <!-- RIGHT CONTENT -->
+    <div style="margin-top:13px;">
       <div style="
         font-size:12px;
         font-weight:700;
-        color:#334155;
+        color:#1d4ed8;
         margin-bottom:6px;
         margin-top:2px;
       ">
-        [공유하기- URL 복사 버튼]
+        [사진탭- 내부버튼]
       </div>
 
       <div style="
@@ -255,63 +251,53 @@
         background:rgb(240, 243, 226);
       ">
         <img src="findanswer/place_picture5.png"
-          style="
-            width:100%;
-            height:auto;
-            display:block;
-          ">
+          style="width:100%;height:auto;display:block;">
+      </div>
+
+      <!-- 공유하기 -->
+      <div style="margin-top:12px;">
+        <div style="
+          font-size:12px;
+          font-weight:700;
+          color:#1d4ed8;
+          margin-bottom:6px;
+        ">
+          [공유하기-URL복사버튼]
+        </div>
+
+        <div style="
+          border-radius:10px;
+          overflow:hidden;
+          border:1px solid #e5e7eb;
+          background:rgb(240, 243, 226);
+        ">
+          <img src="findanswer/source_share.png"
+            style="width:100%;height:auto;display:block;">
+        </div>
       </div>
     </div>
 
-    <!-- 길찾기 (✅ 한 줄 전체폭 / ✅ 100% 전체 보이기) -->
-<!-- 길찾기 (한 줄 전체폭 / div가 이미지에 맞게) -->
-<div style="grid-column:1 / -1;">
-  <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:6px;">
-    [길찾기- 추천거리]
-  </div>
-  <div style="
-    border-radius:10px;
-    overflow:hidden;
-    border:1px solid #e5e7eb;
-    background:#fff;
-  ">
-    <img src="findanswer/cutting22.png"
-      style="
-        width:100%;
-        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
-        display:block;
-      ">
-  </div>
-</div>
+    <!-- FULL WIDTH -->
+    <div style="grid-column:1 / -1;">
+      <div style="font-size:12px;font-weight:700;color:#1d4ed8;margin-bottom:6px;">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[길찾기- 추천거리]
+      </div>
 
-    <!-- 사진탭 (✅ 다음 행 / ✅ 100% 전체 보이기) -->
- <!-- <div style="grid-column:1 / -1;">
-  <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:6px;">
-    [사진탭- 내부버튼]
-  </div>
-  <div style="
-    border-radius:10px;
-    overflow:hidden;
-    border:1px solid #e5e7eb;
-    background:#fff;
-  ">
-    <img src="findanswer/place_picture5.png"
-      style="
-        width:100%;
-        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
-        display:block;
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:#fff;
+        width:90%;
+        margin:0 auto;
       ">
-  </div>
-</div> -->
+        <img src="findanswer/cutting22.png"
+          style="width:100%;height:auto;display:block;">
+      </div>
+    </div>
 
   </div>
 </div>
-
-
-
-
-
-
 
 
   </div>
