--- a/test_following.html
+++ b/test_following.html
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <img src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png?v=2"
+    <img src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png"
       alt="검색 예시"
       style="width:100%;height:auto;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);display:block;">
 
@@ -115,11 +115,11 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;flex-direction:column;gap:0px;">
         <div class="step1-images" style="display:flex; margin-bottom:6px; align-items:center;gap:1px;flex-wrap:nowrap;min-width:0;">
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordpm5.png?v=2" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <img src="findanswer/keywordpm5.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
           <span style="font-size:9px;flex:0 0 auto; margin-left:-2px; color:rgba(0,0,0);">클릭 후,</span>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart22.png?v=2" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <img src="findanswer/missionStart22.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
           <span style="font-size:9px;flex:0 0 auto; margin-left:-2px;">클릭 후,</span>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/naver_logo.png?v=2" style="flex:0.65 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <img src="findanswer/naver_logo.png" style="flex:0.65 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
         </div>
 
         <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:4.5px 8px;margin-bottom:4px;color:#1e40af;display: inline-block; align-self:flex-start;">
@@ -146,14 +146,14 @@
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/newMoreView.png?v=2" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
+          <img src="findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
         </span>
         를 눌러주세요)
       </div>
 
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png?v=2" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
+        <img src="findanswer/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
       </div>
     </div>
 
@@ -163,13 +163,13 @@
       <div>
         <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 15px;">
           <span style="font-weight:300;color:black;font-size:13px"> 아래 </span>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/accent-teamreader.png?v=2" style="flex:3 1 0;height:28px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:6.5px;"><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
+          <img src="findanswer/accent-teamreader.png" style="flex:3 1 0;height:28px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:6.5px;"><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
           <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
           <span style="font-weight:300;color:black;font-size:13px"> 후,</span>
           <br>
           <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
           <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/answer_submit.png?v=2" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
+          <img src="findanswer/answer_submit.png" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
         </div>
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin-bottom:4px;color:#1e40af;display:inline-flex;align-items:center;gap:4px;">
@@ -229,7 +229,7 @@
         background:#fff;
         padding:6px;
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/review_teamleader.png?v=2"
+        <img src="findanswer/review_teamleader.png"
           style="width:100%;height:auto;display:block;">
       </div>
     </div>
@@ -252,7 +252,7 @@
         border:1px solid #e5e7eb;
         background:rgb(240, 243, 226);
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png?v=2"
+        <img src="findanswer/place_picture5.png"
           style="width:100%;height:auto;display:block;">
       </div>
 
@@ -273,7 +273,7 @@
           border:1px solid #e5e7eb;
           background:rgb(240, 243, 226);
         ">
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png?v=2"
+          <img src="findanswer/source_share.png"
             style="width:100%;height:auto;display:block;">
         </div>
       </div>
@@ -293,7 +293,7 @@
         width:90%;
         margin:0 auto;
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/cutting22.png?v=2"
+        <img src="findanswer/cutting22.png"
           style="width:100%;height:auto;display:block;">
       </div>
     </div>
