--- a/naver_map_mission.html
+++ b/naver_map_mission.html
@@ -108,25 +108,42 @@
 
     <!-- STEP 1 -->
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">1</div>
+<div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+  <div style="display:flex;flex-direction:column;gap:6px;">
 
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;flex-direction:column;gap:0px;">
-        <div class="step1-images" style="display:flex; margin-bottom:6px; align-items:center;gap:1px;flex-wrap:nowrap;min-width:0;">
-          <img src="findanswer/keywordpm5.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
-          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px; color:rgba(0,0,0);">클릭 후,</span>
-          <img src="findanswer/missionStart22.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
-        </div>
+    <!-- STEP 이미지 흐름 -->
+    <div class="step1-images"
+         style="display:flex;align-items:center;gap:4px;flex-wrap:nowrap;min-width:0;">
 
-        <!-- <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:4.5px 8px;margin-bottom:4px;color:#1e40af;display: inline-block; align-self:flex-start;">
-          <div style="font-size:13px;color:#475569;">
-            <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span><span style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
-            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
-            <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
-            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭!</span>
-          </div>
-        </div> -->
-      </div>
+      <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/keywordpm5.png"
+           style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+
+      <span style="font-size:10px;color:#334155;">클릭 후</span>
+
+      <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/missionStart22.png"
+           style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+
+      <span style="font-size:10px;color:#334155;">클릭 후</span>
+
+      <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/navermap/TEST2_cropped.png"
+           style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
     </div>
+
+    <!-- ✅ PASTE 이미지 -->
+    <div style="display:flex;justify-content:center;">
+      <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/navermap/PASTE2.png"
+           style="
+             max-width:250px;
+             width:100%;
+             height:auto;
+             border-radius:4px;
+             object-fit:contain;
+           " />
+    </div>
+
+  </div>
+</div>
+
 
     <!-- STEP 2 -->
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">2</div>
@@ -141,17 +158,15 @@
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
-          <img src="findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
         </span>
         를 눌러주세요)
       </div>
 
+
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="TEST.png" style="height:100px; width:auto;" />
-        <img src="TEST2.png" style="height:100px; width:auto;" />
-
-        <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
+        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
       </div>
     </div>
 
@@ -161,13 +176,13 @@
       <div>
         <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 15px;">
           <span style="font-weight:300;color:black;font-size:13px"> 아래 </span>
-          <img src="findanswer/accent-teamreader.png" style="flex:3 1 0;height:28px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:6.5px;"><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/accent-teamreader.png" style="flex:3 1 0;height:28px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:6.5px;"><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
           <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
           <span style="font-weight:300;color:black;font-size:13px"> 후,</span>
           <br>
           <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
           <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
-          <img src="findanswer/answer_submit.png" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/answer_submit.png" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
         </div>
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin-bottom:4px;color:#1e40af;display:inline-flex;align-items:center;gap:4px;">
@@ -227,7 +242,7 @@
         background:#fff;
         padding:6px;
       ">
-        <img src="findanswer/review_teamleader.png"
+        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/review_teamleader.png"
           style="width:100%;height:auto;display:block;">
       </div>
     </div>
@@ -250,7 +265,7 @@
         border:1px solid #e5e7eb;
         background:rgb(240, 243, 226);
       ">
-        <img src="findanswer/place_picture5.png"
+        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/place_picture5.png"
           style="width:100%;height:auto;display:block;">
       </div>
 
@@ -271,7 +286,7 @@
           border:1px solid #e5e7eb;
           background:rgb(240, 243, 226);
         ">
-          <img src="findanswer/source_share.png"
+          <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/source_share.png"
             style="width:100%;height:auto;display:block;">
         </div>
       </div>
@@ -291,7 +306,7 @@
         width:90%;
         margin:0 auto;
       ">
-        <img src="findanswer/cutting22.png"
+        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/cutting22.png"
           style="width:100%;height:auto;display:block;">
       </div>
     </div>
